--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -3,13 +3,15 @@ html
 	padding 0
 	margin 0
 body
+	background #fdfdfd
 	width 100%
 	height 100%
 	margin 0
 	padding 0
 	#main
-		width 100%
-		height 100%
+		background #cdcdcd
+		width 90vh
+		height 90vh
 		position fixed
-		top 0
-		left 0
+		top calc( 50% - 45vh )
+		left calc( 50% - 45vh )
