--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -9,7 +9,12 @@ body
 	margin 0
 	padding 0
 	#main
-		background #cdcdcd
+		width 90vh
+		height 90vh
+		position fixed
+		top calc( 50% - 45vh )
+		left calc( 50% - 45vh )
+	#renderer
 		width 90vh
 		height 90vh
 		position fixed
