--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -8,5 +8,6 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', id='mainStylesheet' href='css/main.css')
   body
+    #renderer
     #main
     script(src='js/main.js')
