--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -1,3 +1,5 @@
+dims = 800px
+
 html
 	height 100%
 	padding 0
@@ -9,14 +11,18 @@ body
 	margin 0
 	padding 0
 	#main
-		width 90vh
-		height 90vh
+		width dims
+		height dims
 		position fixed
-		top calc( 50% - 45vh )
-		left calc( 50% - 45vh )
+		top 50%
+		left 50%
+		margin-top dims * -0.5
+		margin-left dims * -0.5
 	#renderer
-		width 90vh
-		height 90vh
+		width dims
+		height dims
 		position fixed
-		top calc( 50% - 45vh )
-		left calc( 50% - 45vh )
+		top 50%
+		left 50%
+		margin-top dims * -0.5
+		margin-left dims * -0.5
