--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -5,12 +5,12 @@ html
 	padding 0
 	margin 0
 body
-	background #fdfdfd
 	width 100%
 	height 100%
 	margin 0
 	padding 0
 	#main
+		border solid 1px #dedede
 		width dims
 		height dims
 		position fixed
@@ -19,6 +19,7 @@ body
 		margin-top dims * -0.5
 		margin-left dims * -0.5
 	#renderer
+		border solid 1px #dedede
 		width dims
 		height dims
 		position fixed
