--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -10,4 +10,6 @@ html
   body
     #renderer
     #main
+    audio#player
+    <script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
     script(src='js/main.js')
