added first export stuff

--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -18,6 +18,11 @@ body
 		left 50%
 		margin-top dims * -0.5
 		margin-left dims * -0.5
+		svg
+			position absolute
+			top 0
+			left 0
+			z-index 1
 	#renderer
 		border solid 1px #dedede
 		width dims
