--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -10,25 +10,19 @@ body
 	margin 0
 	padding 0
 	#main
-		border solid 1px #dedede
-		width dims
-		height dims
+		width 100%
+		height 100%
 		position fixed
-		top 50%
-		left 50%
-		margin-top dims * -0.5
-		margin-left dims * -0.5
+		top 0
+		left 0
 		svg
 			position absolute
 			top 0
 			left 0
 			z-index 1
 	#renderer
-		border solid 1px #dedede
-		width dims
-		height dims
+		width 100%
+		height 100%
 		position fixed
-		top 50%
-		left 50%
-		margin-top dims * -0.5
-		margin-left dims * -0.5
+		top 0
+		left 0
