--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -17,9 +17,13 @@ body
 		left 0
 		svg
 			position absolute
-			top 0
-			left 0
+			top 50%
+			left 50%
+			margin-left -398px
+			margin-top -398px
 			z-index 1
+			background #ffffff
+			border solid 1px #dedede
 	#renderer
 		width 100%
 		height 100%
