--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -1,4 +1,15 @@
-dims = 800px
+@font-face
+	font-family 'gt_bold'
+	src url('fonts/gt-walsheim-bold-webfont.woff2') format('woff2'), url('fonts/gt-walsheim-bold-webfont.woff') format('woff')
+	font-weight normal
+	font-style normal
+
+@font-face
+	font-family 'gt_regular'
+	src url('fonts/gt-walsheim-regular-webfont.woff2') format('woff2'), url('fonts/gt-walsheim-regular-webfont.woff') format('woff')
+	font-weight normal
+	font-style normal
+
 
 html
 	height 100%
@@ -9,6 +20,7 @@ body
 	height 100%
 	margin 0
 	padding 0
+	font-family 'gt_regular'
 	#main
 		width 100%
 		height 100%
