--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -21,6 +21,32 @@ body
 	margin 0
 	padding 0
 	font-family 'gt_regular'
+	font-size 11px
+	#parentbox
+		height 100%
+		&:before
+			content ' '
+			display inline-block
+			vertical-align middle
+			height 100%
+		#copy
+			display inline-block
+			vertical-align middle
+			color #777777
+			.measure
+				font-size 8px
+				border-top solid 1px #777777
+				padding-bottom 2px
+				.bar
+					position relative
+					widht 100%
+					height 13px
+					background repeating-linear-gradient( 90deg, #ffffff, #777777 1px, #ffffff 1px, #ffffff 10px );
+					.inner
+						position absolute
+						height 100%
+						width 50%
+						background linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,0.15) 100%)
 	#main
 		width 100%
 		height 100%
