--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -15,6 +15,7 @@ html
 	height 100%
 	padding 0
 	margin 0
+
 body
 	width 100%
 	height 100%
@@ -22,47 +23,85 @@ body
 	padding 0
 	font-family 'gt_regular'
 	font-size 11px
-	#parentbox
-		height 100%
-		&:before
-			content ' '
-			display inline-block
-			vertical-align middle
-			height 100%
-		#copy
-			display inline-block
-			vertical-align middle
-			color #777777
-			.measure
-				font-size 8px
-				border-top solid 1px #777777
-				padding-bottom 2px
-				.bar
-					position relative
-					widht 100%
-					height 13px
-					background repeating-linear-gradient( 90deg, #ffffff, #777777 1px, #ffffff 1px, #ffffff 10px );
-					.inner
-						position absolute
-						height 100%
-						width 50%
-						background linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,0.15) 100%)
+
 	#main
 		width 100%
 		height 100%
 		position fixed
 		top 0
 		left 0
-		svg
+
+		#parentbox
+			height 100%
+			width 300px
+			margin-left 120px
 			position absolute
-			top 50%
-			left 50%
-			margin-left -398px
-			margin-top -398px
-			z-index 1
+			&:before
+				content ' '
+				display inline-block
+				vertical-align middle
+				height 100%
+
+			#copy
+				display inline-block
+				vertical-align middle
+				color #777777
+				#title
+					//transform scale(2,2)
+					//transform-origin 0 100%
+					height 200px
+				.measure
+					font-size 8px
+					border-top solid 1px #777777
+					padding-top 3px
+					padding-bottom 5px
+					.bar
+						margin-top 3px
+						position relative
+						widht 100%
+						height 13px
+						background repeating-linear-gradient( 90deg, #ffffff00, #777777 1px, #ffffff00 1px, #ffffff00 10px );
+						.inner
+							position absolute
+							height 100%
+							width 100%
+							transform scale(0,1)
+							transform-origin 0 0
+							background linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,0.15) 100%)
+
+			#footer
+				border-top solid 1px #777777
+				padding-top 100px
+				a
+					color #777777
+					font-family gt_bold
+					text-decoration none
+					&:hover
+						text-decoration underline
+
+		//svg
+		//	position absolute
+		//	top 50%
+		//	left 50%
+		//	margin-left -398px
+		//	margin-top -398px
+		//	z-index 1
+
 	#renderer
 		width 100%
 		height 100%
 		position fixed
 		top 0
 		left 0
+.dg.ac
+	display none
+
+
+
+
+@media only screen and (min-width: 1440px)
+	body
+		#main
+			width 1440px
+			left 50%
+			margin-left -720px
