--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -49,5 +49,7 @@ html
                             .inner#audioTimer
                 #footer
                     span Visualiza el estado de la remolacha a tiempo<br>real en <a href="http://www.laremolachahacklab.com">www.laremolachahacklab.com</a>
-    audio#player
+    audio#player1
+    audio#player2
+    audio#player3
     script(src='js/main.js')
