--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -2,9 +2,10 @@ doctype
 html
   head
     meta(charset='utf-8')
+    meta(http-equiv="Content-Type",content="text/html; charset=utf-8")
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
-    title #{title}
+    title La Remolacha Hacklab
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', id='mainStylesheet' href='css/main.css')
   body
@@ -44,7 +45,7 @@ html
                         .bar
                             .inner#lightTimer
                     .measure
-                        span MÚSICA
+                        span M&Uacute;SICA
                         .bar
                             .inner#audioTimer
                 #footer
